--- a/index.html
+++ b/index.html
@@ -3,26 +3,230 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="icon" href="Site Icon Link"> -->
+    <link rel="icon" href="./images/logoicon.jpg">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Site Title</title>
+    <title>Truck Project</title>
 </head>
 <body>
-    <header class="site-header">
-        <div class="container">
-            <div class="header"></div>
-        </div>
-    </header>
     <main class="site-main">
         <section class="hero-section">
             <div class="container">
-                <div class="hero"></div>
+                <div class="hero">
+                    <div class="hero__content-wrapper">
+                        <div class="hero__contents">
+                            <h1 class="hero__title">Поставщик Дальнего Востока</h1>
+                            <p class="hero__text">Наши клиенты получают полный спектр услуг по работе с Китаем.  Начиная с подбора производителя заканчивая доставкой товара до двери.  Настолько прозрачных сделок с Китаем вы еще не осуществляли.
+                            </p>
+                            <a class="hero__link" href="#">Узнать больше</a>
+                        </div>
+                        <img class="hero__img" src="./images/hero-img.png" alt="hero img" width="635" height="505"> 
+                        <img class="hero__tablet-img" src="./images/hero-tablet-img.png" alt="hero img" width="690" height="314"> 
+                        <img class="hero__mobile-img" src="./images/hero-mobile-img.png" alt="work img" width="345" height="253">
+                    </div>
+                    <ul class="hero__list">
+                        <li class="hero__item item">
+                            <img class="item__logo" src="./images/hero-icon1.svg" alt="hero icon" width="92" height="92">
+                            <div class="item__wrapper">
+                                <h2 class="item__title">Поиск производителей по товару</h2>
+                                <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut.</p> 
+                            </div>
+                        </li>
+                        <li class="hero__item item">
+                            <img class="item__logo" src="./images/hero-icon2.svg" alt="hero icon" width="92" height="92">
+                            <div class="item__wrapper">
+                                <h2 class="item__title">Поиск производителей по товару</h2>
+                                <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut.</p> 
+                            </div>
+                        </li>
+                        <li class="hero__item item">
+                            <img class="item__logo" src="./images/hero-icon3.svg" alt="hero icon" width="92" height="92">
+                            <div class="item__wrapper">
+                                <h2 class="item__title">Поиск производителей по товару</h2>
+                                <p class="item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut.</p> 
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="why-section">
+            <div class="container">
+                <img class="why__img" src="./images/why-imgsvg.svg" alt="why img" width="1242" height="453">
+                <img class="why__tablet-img" src="./images/why-tablet-svg.svg" alt="why img" width="729" height="383">
+                <ul class="why__list">
+                    <li class="why__item">
+                        <img class="why__logo" src="./images/whyicon1.svg" alt="why icon">
+                        <div class="why__content-wrapper">
+                            <h2 class="why__title">Lorem ipsum dolor sit amet</h2>
+                            <p class="why__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                        </div>
+                    </li>
+                    <li class="why__item">
+                        <img class="why__logo" src="./images/whyicon2.svg" alt="why icon">
+                        <div class="why__content-wrapper">
+                            <h2 class="why__title">Lorem ipsum dolor sit amet</h2>
+                            <p class="why__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                        </div>
+                    </li>
+                    <li class="why__item">
+                        <img class="why__logo" src="./images/whyicon3.svg" alt="why icon">
+                        <div class="why__content-wrapper">
+                            <h2 class="why__title">Lorem ipsum dolor sit amet</h2>
+                            <p class="why__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                        </div>
+                    </li>
+                    <li class="why__item">
+                        <img class="why__logo" src="./images/whyicon4.svg" alt="why icon">
+                        <div class="why__content-wrapper">
+                            <h2 class="why__title">Lorem ipsum dolor sit amet</h2>
+                            <p class="why__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="work-section">
+            <div class="container">
+                <div class="work__content-wrapper">
+                    <h2 class="work__title">Выполненные работы</h2>
+                    <p class="work__text">Мы собрали информацию по грузам, которые мы уже доставили. У нас специальный подход к каждому виду товаров.
+                    </p>
+                </div>
+                <ul class="work__list">
+                    <li class="work__item">
+                        <img class="work__img" src="./images/workimg1.png" alt="work img" width="393" height="247">
+                        <img class="work__tablet-img" src="./images/workimg10.png" alt="work img" width="690" height="247">
+                        <img class="work__mobile-img" src="./images/work-mobileimg.png" alt="work img" width="345" height="222">
+                        <div class="work__contents">
+                            <h3 class="work__subtitle">Станки и оборудование</h3>
+                            <p class="work__subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                            <a class="work__link" href="#">20 000 руб.</a>
+                        </div>
+                    </li>
+                    <li class="work__item">
+                        <img class="work__img" src="./images/workimg2.png" alt="work img" width="393" height="247">
+                        <img class="work__tablet-img" src="./images/workimg20.png" alt="work img" width="690" height="247">
+                        <div class="work__contents">
+                            <h3 class="work__subtitle">Компоненты и запчасти</h3>
+                            <p class="work__subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                            <a class="work__link" href="#">18 000 руб.</a>
+                        </div>
+                    </li>
+                    <li class="work__item">
+                        <img class="work__img" src="./images/workimg3.png" alt="work img" width="393" height="247">
+                        <div class="work__contents">
+                            <h3 class="work__subtitle">Станки и оборудование</h3>
+                            <p class="work__subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                            <a class="work__link" href="#">20 000 руб.</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="step-section">
+            <div class="container">
+                <h2 class="step__title">Этапы поставки</h2>
+                <ul class="step__list">
+                    <li class="step__item">
+                        <img class="step__img" src="./images/stepimg1.png" alt="step img" width="331" height="181">
+                        <div class="step__content-wrapper">
+                            <h3 class="step__subtitle">Предложение от продавца</h3>
+                            <span class="step__span">
+                                <img class="step__span-img" src="./images/stepborder.svg" alt="step border" width="86" height="0">
+                            </span>
+                            <p class="step__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit duis tristique sollicitudin nibh sit amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis urna cursus eget nunc scelerisque viverra mauris in.</p>
+                        </div>
+                    </li>
+                    <li class="step__item">
+                        <img class="step__img" src="./images/stepimg2.png" alt="step img" width="331" height="181">
+                        <div class="step__content-wrapper">
+                            <h3 class="step__subtitle">Доставка</h3>
+                            <span class="step__span">
+                                <img class="step__span-img" src="./images/stepborder.svg" alt="step border" width="86" height="0">
+                            </span>
+                            <p class="step__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit duis tristique sollicitudin nibh sit amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis urna cursus eget nunc scelerisque viverra mauris in.</p>
+                        </div>
+                    </li>
+                    <li class="step__item">
+                        <img class="step__img" src="./images/stepimg3.png" alt="step img" width="331" height="181">
+                        <div class="step__content-wrapper">
+                            <h3 class="step__subtitle">Установка у клиента</h3>
+                            <span class="step__span">
+                                <img class="step__span-img" src="./images/stepborder.svg" alt="step border" width="86" height="0">
+                            </span>
+                            <p class="step__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit duis tristique sollicitudin nibh sit amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis urna cursus eget nunc scelerisque viverra mauris in.</p>
+                        </div>
+                    </li>
+                </ul>
+                <video class="step__video" controls>
+                    <source src="./video/video.mp4">
+                </video>
             </div>
         </section>
     </main>
     <footer class="site-footer">
         <div class="container">
-            <div class="footer"></div>
+            <div class="footer">
+                <a class="footer__logo-link" href="/">
+                    <img class="footer__logo-img" src="./images/footerlogo.svg" alt="footer logo" width="93" height="46">
+                </a>
+                <div class="footer__content-wrapper">
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Каталог</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">о компании</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Индивидуальная</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Партнерам</a>
+                        </li>
+                    </ul>
+                    <ul class="footer__list-model">
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Каталог</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">о компании</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Индивидуальная</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Партнерам</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="#">Партнерам</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__link-wrapper">
+                    <div class="footer__app-wrapper">
+                        <a class="hover:text-blue-600 cursor-pointer" target="_blank" href="https://www.facebook.com/">
+                         <svg class="footer__app-link" width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14.5271 7.19324C14.5271 10.8486 11.4919 13.8313 7.72362 13.8313C3.95532 13.8313 0.920166 10.8486 0.920166 7.19324C0.920166 3.53787 3.95532 0.555176 7.72362 0.555176C11.4919 0.555176 14.5271 3.53787 14.5271 7.19324Z" stroke="currentColor"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.46885 3.02414C6.9168 3.00439 7.05962 3 8.20068 3C9.34174 3 9.48456 3.00475 9.93212 3.02414C10.3797 3.04352 10.6852 3.11191 10.9525 3.21101C11.2324 3.31231 11.4864 3.47067 11.6964 3.67546C11.9103 3.87624 12.0752 4.11907 12.1806 4.3875C12.2845 4.64349 12.3555 4.93606 12.3762 5.36394C12.3968 5.79365 12.4014 5.93042 12.4014 7.02279C12.4014 8.11553 12.3964 8.2523 12.3762 8.68128C12.3559 9.10916 12.2845 9.40172 12.1806 9.65772C12.0752 9.92618 11.91 10.1694 11.6964 10.3705C11.4864 10.5753 11.2324 10.7333 10.9525 10.8342C10.6852 10.9337 10.3797 11.0017 9.93289 11.0214C9.48456 11.0412 9.34174 11.0456 8.20068 11.0456C7.05962 11.0456 6.9168 11.0408 6.46885 11.0214C6.02205 11.0021 5.71655 10.9337 5.44923 10.8342C5.1689 10.7333 4.91492 10.575 4.70495 10.3705C4.49124 10.1696 4.32586 9.92647 4.22034 9.65808C4.11686 9.40209 4.04583 9.10952 4.0252 8.68164C4.00458 8.25194 4 8.11516 4 7.02279C4 5.93005 4.00496 5.79328 4.0252 5.36467C4.04544 4.93606 4.11686 4.64349 4.22034 4.3875C4.32602 4.1191 4.49152 3.87599 4.70533 3.6751C4.915 3.47048 5.16873 3.31211 5.44885 3.21101C5.71617 3.11191 6.02167 3.04388 6.46847 3.02414H6.46885ZM9.89814 3.74824C9.45516 3.72886 9.32226 3.72483 8.20068 3.72483C7.0791 3.72483 6.9462 3.72886 6.50322 3.74824C6.09347 3.76616 5.87121 3.83162 5.72304 3.88684C5.52714 3.95998 5.38699 4.04666 5.23996 4.18745C5.1006 4.3173 4.99334 4.47537 4.92606 4.65008C4.8684 4.79197 4.80004 5.00481 4.78133 5.39722C4.76109 5.82144 4.75689 5.94871 4.75689 7.02279C4.75689 8.09688 4.76109 8.22414 4.78133 8.64836C4.80004 9.04077 4.8684 9.25361 4.92606 9.39551C4.99327 9.56995 5.10058 9.7283 5.23996 9.85813C5.37553 9.99161 5.54089 10.0944 5.72304 10.1587C5.87121 10.214 6.09347 10.2794 6.50322 10.2973C6.9462 10.3167 7.07872 10.3207 8.20068 10.3207C9.32264 10.3207 9.45516 10.3167 9.89814 10.2973C10.3079 10.2794 10.5301 10.214 10.6783 10.1587C10.8742 10.0856 11.0144 9.99892 11.1614 9.85813C11.3008 9.7283 11.4081 9.56995 11.4753 9.39551C11.533 9.25361 11.6013 9.04077 11.62 8.64836C11.6403 8.22414 11.6445 8.09688 11.6445 7.02279C11.6445 5.94871 11.6403 5.82144 11.62 5.39722C11.6013 5.00481 11.533 4.79197 11.4753 4.65008C11.3989 4.46247 11.3084 4.32825 11.1614 4.18745C11.0258 4.054 10.8607 3.95128 10.6783 3.88684C10.5301 3.83162 10.3079 3.76616 9.89814 3.74824ZM7.66414 8.26291C7.96378 8.38236 8.29744 8.39848 8.60812 8.30852C8.9188 8.21856 9.18723 8.02809 9.36756 7.76966C9.54789 7.51122 9.62893 7.20084 9.59685 6.89154C9.56477 6.58224 9.42155 6.29319 9.19166 6.07378C9.04511 5.93352 8.86791 5.82612 8.67281 5.75932C8.47772 5.69252 8.26958 5.66797 8.06339 5.68745C7.8572 5.70693 7.65809 5.76994 7.48038 5.87195C7.30267 5.97397 7.15079 6.11245 7.03568 6.27742C6.92057 6.4424 6.84508 6.62976 6.81465 6.82603C6.78423 7.02229 6.79962 7.22257 6.85972 7.41246C6.91983 7.60234 7.02315 7.7771 7.16224 7.92416C7.30134 8.07122 7.47275 8.18691 7.66414 8.26291ZM6.67392 5.56069C6.87442 5.36868 7.11244 5.21638 7.37441 5.11246C7.63637 5.00855 7.91714 4.95507 8.20068 4.95507C8.48422 4.95507 8.76499 5.00855 9.02695 5.11246C9.28892 5.21638 9.52694 5.36868 9.72744 5.56069C9.92793 5.75269 10.087 5.98064 10.1955 6.23151C10.304 6.48237 10.3598 6.75125 10.3598 7.02279C10.3598 7.29433 10.304 7.56321 10.1955 7.81407C10.087 8.06494 9.92793 8.29289 9.72744 8.48489C9.32252 8.87267 8.77332 9.09051 8.20068 9.09051C7.62804 9.09051 7.07884 8.87267 6.67392 8.48489C6.269 8.09712 6.04152 7.57119 6.04152 7.02279C6.04152 6.4744 6.269 5.94846 6.67392 5.56069ZM10.8387 5.263C10.8884 5.21812 10.9282 5.16414 10.9557 5.10428C10.9832 5.04441 10.9979 4.97986 10.9989 4.91446C10.9999 4.84905 10.9872 4.78412 10.9615 4.72351C10.9358 4.6629 10.8977 4.60784 10.8494 4.56159C10.8011 4.51534 10.7436 4.47884 10.6803 4.45425C10.617 4.42966 10.5492 4.41748 10.4809 4.41843C10.4126 4.41938 10.3452 4.43345 10.2827 4.4598C10.2202 4.48614 10.1638 4.52423 10.117 4.57181C10.0258 4.66435 9.9759 4.78726 9.97784 4.91446C9.97977 5.04165 10.0334 5.16312 10.1273 5.25307C10.2213 5.34302 10.3481 5.39438 10.4809 5.39623C10.6137 5.39808 10.7421 5.35029 10.8387 5.263Z" fill="currentColor"/>
+                        </svg>   
+                        </a>
+                        <a class="hover:text-pink-600 cursor-pointer" target="_blank" href="https://www.instagram.com/">
+                            <svg class="footer__app-link" width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14.7812 7.19324C14.7812 10.8486 11.7461 13.8313 7.97777 13.8313C4.20947 13.8313 1.17432 10.8486 1.17432 7.19324C1.17432 3.53787 4.20947 0.555176 7.97777 0.555176C11.7461 0.555176 14.7812 3.53787 14.7812 7.19324Z" stroke="currentColor"/>
+                            <path d="M8.18464 12.0499V7.92851H9.6365L9.85231 6.31486H8.18464V5.28704C8.18464 4.8214 8.32011 4.5026 9.01795 4.5026H9.90219V3.06395C9.47196 3.01979 9.0395 2.99847 8.60681 3.00009C7.3235 3.00009 6.44241 3.75034 6.44241 5.12764V6.31185H5V7.92549H6.44556V12.0499H8.18464Z" fill="currentColor"/>
+                        </svg>    
+                        </a>
+                                                    
+                    </div>
+                    <a class="footer__phone-call" href="tel:+380996384537">+38 (099)-638-45-37</a>
+                    <a class="footer__btn" href="#">
+                        <span>Персональная консультация</span>
+                        <img src="./images/footerarrow.svg" alt="arrow img" width="14" height="14">
+                    </a>
+                </div>
+            </div>
+            <strong class="footer__subtitle">© 1993–2021 Интернет-магазин «LOGO» — Truck</strong>
         </div>
     </footer>
 </body>
